add vendors swiper

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,12 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/swiper-vars";
+@import "vendor/swiper";
+
+// Global
+// ---------------------------------
+
+
+// Blocks
+// ---------------------------------
