--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,13 +1,21 @@
 // Vendor
 // ---------------------------------
-
 @import "vendor/normalize";
 @import "vendor/swiper-vars";
 @import "vendor/swiper";
 
 // Global
 // ---------------------------------
+@import "./common/global";
+@import "./common/visually-hidden";
+@import "./common/variables";
+@import "./common/mixins";
+@import "./common/fonts";
 
 
 // Blocks
 // ---------------------------------
+@import "./blocks/page";
+@import "./blocks/button";
+@import "./blocks/section";
+@import "./blocks/link";
