add features file of scss

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,14 @@
 @import "./blocks/button";
 @import "./blocks/section";
 @import "./blocks/link";
+@import "./blocks/hero";
+@import "./blocks/about";
+@import "./blocks/faq";
+@import "./blocks/features";
+@import "./blocks/footer";
+@import "./blocks/form";
+@import "./blocks/games";
+@import "./blocks/juri";
+@import "./blocks/offers";
+@import "./blocks/price";
+@import "./blocks/reviews";
